<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Gym App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_customize_trainer_sched">CustomizeTrainerSchedActivity</string>
    <string name="underweight_string"><![CDATA[Underweight: <18]]></string>
    <string name="Login">Login</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_add_member">AddMemberActivity</string>
    <string name="name">Name</string>
    <string name="Email">Email</string>
    <string name="aasd">Add Member</string>
    <string name="asdkmaskdmkas">addmemberimgview</string>
    <string name="random32">asdkkn</string>
    <string name="title_activity_splash">splashActivity</string>

</resources>
