<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fproductions.f.thegymapp.AddMemberActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/NameEditText"
        android:layout_toEndOf="@+id/addMemberImageView"
        android:layout_marginTop="83dp"
        android:layout_marginLeft="80dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/addMemberImageView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        android:ems="10"
        android:id="@+id/EmailEditText"
        android:layout_alignBottom="@+id/addMemberImageView"
        android:layout_alignLeft="@+id/NameEditText"
        android:layout_alignStart="@+id/NameEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aasd"
        android:id="@+id/button"
        android:onClick="AddMemberOnCLick"
        android:layout_marginRight="42dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/addMemberImageView"
        android:background="@drawable/border"
        android:contentDescription="@string/asdkmaskdmkas"
        android:layout_alignTop="@+id/NameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Photo"
        android:id="@+id/AddPhotoButton"
        android:layout_toStartOf="@+id/NameEditText"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/NameEditText" />


</RelativeLayout>
