<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabhost"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">


                    <RelativeLayout
                        android:layout_marginTop="50dp"
                        android:layout_width="311dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="weight in kilograms"
                        android:id="@+id/EditTextWeight"
                        android:inputType="number"
                        android:maxLength="3"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="height in centimeters"
                        android:id="@+id/EditTextHeight"
                        android:maxLength="3"
                        android:layout_below="@+id/EditTextWeight"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:id="@+id/textView" />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Calculate"
                            android:id="@+id/ButtonCalculate"
                            android:onClick="btnOnClick"
                            android:layout_toEndOf="@+id/EditTextHeight"
                            android:layout_alignBottom="@+id/EditTextHeight"
                            android:layout_toRightOf="@+id/EditTextHeight" />

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="50dp">

                        <TextView
                            android:layout_marginLeft="40dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="BMI(Body Mass Index)"
                            android:textSize="20dp"
                            android:id="@+id/textView2" />
                        <TextView
                            android:layout_marginLeft="60dp"
                            android:layout_width="50dp"
                            android:layout_height="20dp"
                            android:background="@drawable/back"
                            android:textSize="15dp"
                            android:layout_alignLeft="@+id/textView2"
                            android:layout_alignStart="@+id/textView2"
                            android:layout_below="@+id/textView2"
                            android:id="@+id/result_text_view" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/underweight_string"
                            android:id="@+id/bmi_result_text_view"
                            android:layout_below="@+id/result_text_view"
                            android:layout_alignLeft="@+id/textView2"
                            android:layout_alignStart="@+id/textView2" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Normal weight: 18-24"
                            android:id="@+id/textView5"
                            android:layout_below="@+id/bmi_result_text_view"
                            android:layout_alignLeft="@+id/bmi_result_text_view"
                            android:layout_alignStart="@+id/bmi_result_text_view" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Overweight: 25-30"
                            android:id="@+id/textView6"
                            android:layout_below="@+id/textView5"
                            android:layout_alignLeft="@+id/textView5"
                            android:layout_alignStart="@+id/textView5" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Obese: >30"
                            android:layout_below="@+id/textView6"
                            android:layout_alignLeft="@+id/textView6"
                            android:layout_alignStart="@+id/textView6" />
                        </RelativeLayout>



                    </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">
                    
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/program_spinner">
                        </Spinner>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/program_imageview"
                            />
                        </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                        />

                    <WebView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:id="@+id/browser">

                        </WebView>
                    </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/linearLayout4"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/rules_regulation_image_view"
                        android:src="@drawable/gym_rules"/>
                    </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/LinearLayout5"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:contentDescription="@string/aasd"
                        android:id="@+id/MemberImageView"
                        android:background="@drawable/border"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/NameTextView"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="40dp"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:layout_gravity="left"
                        android:hint="@string/Email"
                        android:ems="10"
                        android:id="@+id/EmailEditText"
                        android:layout_marginTop="10dp"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Login"
                        android:onClick="LoginOnClick"
                        android:layout_gravity="left"
                        android:layout_marginTop="10dp"
                        />

                    </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>
